--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -3220,7 +3220,663 @@ var mergeTrees = function(root1, root2) {
 
 
 
+-----
 
+## **BM33** **二叉树的镜像**
+
+请完成一个函数，输入一个二叉树，该函数输出它的镜像。
+
+#### 递归
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {TreeNode}
+ */
+var mirrorTree = function(root) {
+    if (root === null) {
+        return null;
+    }
+    const left = mirrorTree(root.left);
+    const right = mirrorTree(root.right);
+    root.left = right;
+    root.right = left;
+    return root;
+};
+```
+
+#### 迭代
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {TreeNode}
+ */
+var mirrorTree = function(root) {
+    if (root === null) {
+        return null;
+    }
+    let arr = [root];
+    while (arr.length) {
+        let n = arr.length;
+        while (n > 0) {
+            n--;
+            let node = arr.shift();
+            let temp = node.left;
+            node.left = node.right;
+            node.right = temp;
+            if (node.left !== null) {
+                arr.push(node.left);
+            }
+            if (node.right !== null) {
+                arr.push(node.right);
+            }
+        }
+    }
+    return root;
+};
+```
+
+
+
+----
+
+## **BM34** **判断是不是二叉搜索树**
+
+给你一个二叉树的根节点 root ，判断其是否是一个有效的二叉搜索树。
+
+有效 二叉搜索树定义如下：
+
+- 节点的左子树只包含 小于 当前节点的数。
+
+- 节点的右子树只包含 大于 当前节点的数。
+- 所有左子树和右子树自身必须也是二叉搜索树。
+
+
+
+#### 递归
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isValidBST = function(root) {
+    return dfs(root, -Infinity, Infinity)
+};
+
+const dfs = (root, lower, upper) => {
+    if (root === null) {
+        return true;
+    }
+    if (root.val <= lower || root.val >= upper) {
+        return false;
+    }
+    return dfs(root.left, lower, root.val) && dfs(root.right, root.val, upper);
+}
+```
+
+
+
+#### 中序遍历
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isValidBST = function(root) {
+    const stack = [];
+    let inorder = -Infinity;
+
+    while (stack.length || root !== null) {
+        while (root !== null) {
+            stack.push(root);
+            root = root.left;
+        }
+        root = stack.pop();
+        // 如果中序遍历得到的节点的值小于等于前一个 inorder，说明不是二叉搜索树
+        if (root.val <= inorder) {
+            return false;
+        }
+        inorder = root.val;
+        root = root.right;
+    }
+    return true;
+};
+
+```
+
+
+
+----
+
+**BM35** **判断是不是完全二叉树**
+
+给定一个二叉树，确定他是否是一个完全二叉树。
+
+完全二叉树的定义：若二叉树的深度为 h，除第 h 层外，其它各层的结点数都达到最大个数，第 h 层所有的叶子结点都连续集中在最左边，这就是完全二叉树。（第 h 层可能包含 [1~2h] 个节点）
+
+基本思路就是，将每层的节点以层序遍历的方式全部放入队列中（包括null） 如果是完全二叉树，在我们取出节点的时候，应该是直到整棵树遍历完毕才会遇到null。 所以当我们按层序遍历的方式，遇到null，但是队列中仍然存在节点，则代表不是完全二叉树；否则，是完全二叉树。
+
+```js
+/*
+ * function TreeNode(x) {
+ *   this.val = x;
+ *   this.left = null;
+ *   this.right = null;
+ * }
+ */
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ *
+ * 
+ * @param root TreeNode类 
+ * @return bool布尔型
+ */
+function isCompleteTree( root ) {
+    // write code here
+    if (root === null) {
+        return true;
+    }
+    const arr = [root];
+    let flag = false;
+    while (arr.length) {
+        const node = arr.shift();
+        if (node === null) {
+            flag = true;
+        } else {
+            if (flag && arr.length) {
+                return false;
+            }
+            arr.push(node.left);
+            arr.push(node.right);
+        }
+    }
+    return true;
+}
+module.exports = {
+    isCompleteTree : isCompleteTree
+};
+```
+
+
+
+----
+
+## **BM36** **判断是不是平衡二叉树**
+
+给定一个二叉树，判断它是否是高度平衡的二叉树。
+
+本题中，一棵高度平衡二叉树定义为：
+
+> 一个二叉树*每个节点* 的左右两个子树的高度差的绝对值不超过 1 。
+
+  **自底向上的递归**
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isBalanced = function(root) {
+    return getHeight(root) >= 0;
+
+};
+
+const getHeight = (root) => {
+    if (root === null) {
+        return 0;
+    }
+    let leftHeight = getHeight(root.left);
+    let rightHeight = getHeight(root.right);
+    // 如果存在一棵子树不平衡，则整个二叉树一定不平衡。
+    if (leftHeight === -1 || rightHeight === -1 || Math.abs(leftHeight - rightHeight) > 1) {
+        return -1;
+    } else {
+        return Math.max(leftHeight, rightHeight) + 1;
+    }
+}
+```
+
+
+
+----
+
+## **BM37** **二叉搜索树的最近公共祖先**
+
+给定一个二叉搜索树, 找到该树中两个指定节点的最近公共祖先。
+
+百度百科中最近公共祖先的定义为：“对于有根树 T 的两个结点 p、q，最近公共祖先表示为一个结点 x，满足 x 是 p、q 的祖先且 x 的深度尽可能大（一个节点也可以是它自己的祖先）。”
+
+说明:
+
+所有节点的值都是唯一的。
+p、q 为不同节点且均存在于给定的二叉搜索树中。
+
+![二叉搜索树的最近公共祖先（两次遍历）](E:\pogject\学习笔记\image\leetcode\二叉搜索树的最近公共祖先（两次遍历）.png)
+
+#### 一次遍历
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+
+/**
+ * @param {TreeNode} root
+ * @param {TreeNode} p
+ * @param {TreeNode} q
+ * @return {TreeNode}
+ */
+var lowestCommonAncestor = function(root, p, q) {
+    //注意是二叉搜索
+    if (root.val<p.val && root.val<q.val) {
+        return lowestCommonAncestor(root.right,p,q);
+    }else if(root.val>p.val && root.val>q.val) {
+        return lowestCommonAncestor(root.left,p,q);
+    }else{
+        //返回的是结点
+        return root;
+    }
+};
+```
+
+
+
+----
+
+## **BM38** **在二叉树中找到两个节点的最近公共祖先**
+
+给定一个二叉树, 找到该树中两个指定节点的最近公共祖先。
+
+百度百科中最近公共祖先的定义为：“对于有根树 T 的两个节点 p、q，最近公共祖先表示为一个节点 x，满足 x 是 p、q 的祖先且 x 的深度尽可能大（一个节点也可以是它自己的祖先）。”
+
+提示：
+
+树中节点数目在范围 [2, 105] 内。
+-109 <= Node.val <= 109
+所有 Node.val 互不相同 。
+p != q
+p 和 q 均存在于给定的二叉树中。
+
+
+
+#### 递归
+
+![在二叉树中找到两个节点的最近公共祖先](E:\pogject\学习笔记\image\niuke\在二叉树中找到两个节点的最近公共祖先.png)
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {TreeNode} p
+ * @param {TreeNode} q
+ * @return {TreeNode}
+ */
+var lowestCommonAncestor = function(root, p, q) {
+    let ans = null;
+    const dfs = (root, p, q) => {
+        if (root === null) {
+            return false;
+        }
+        const leftSon = dfs(root.left, p, q);
+        const rightSon = dfs(root.right, p, q);
+        if ((leftSon && rightSon) || ((root.val === p.val || root.val === q.val) && (leftSon || rightSon))) {
+            ans = root;
+        }
+        return leftSon || rightSon || (root.val === p.val || root.val === q.val);
+    }
+    dfs(root, p, q);
+    return ans;
+};
+```
+
+
+
+#### 存储父节点
+
+我们可以用哈希表存储所有节点的父节点，然后我们就可以利用节点的父节点信息从 p 结点开始不断往上跳，并记录已经访问过的节点，再从 q 节点开始不断往上跳，如果碰到已经访问过的节点，那么这个节点就是我们要找的最近公共祖先。
+
+算法
+
+1. 从根节点开始遍历整棵二叉树，用哈希表记录每个节点的父节点指针。
+
+2. 从 p 节点开始不断往它的祖先移动，并用数据结构记录已经访问过的祖先节点。
+3. 同样，我们再从 q 节点开始不断往它的祖先移动，如果有祖先已经被访问过，即意味着这是 p 和 q 的深度最深的公共祖先，即 LCA 节点。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {TreeNode} p
+ * @param {TreeNode} q
+ * @return {TreeNode}
+ */
+var lowestCommonAncestor = function(root, p, q) {
+    if (root === null) {
+        return null;
+    }
+    const parent = new Map();
+    const visited = new Set();
+
+    const dfs = (root) => {
+        if (root.left) {
+            parent.set(root.left, root);
+            dfs(root.left);
+        }
+        if (root.right) {
+            parent.set(root.right, root);
+            dfs(root.right);
+        }
+    }
+    dfs(root);
+    while (p) {
+        visited.add(p);
+        p = parent.get(p);
+    }
+    while (q) {
+        if (visited.has(q)) {
+            return q;
+        }
+        q = parent.get(q);
+    }
+    return null;
+};
+```
+
+
+
+-----
+
+## **BM39** **序列化二叉树**
+
+请实现两个函数，分别用来序列化和反序列化二叉树。
+
+你需要设计一个算法来实现二叉树的序列化与反序列化。这里不限定你的序列 / 反序列化算法执行逻辑，你只需要保证一个二叉树可以被序列化为一个字符串并且将这个字符串反序列化为原始的树结构。
+
+提示：输入输出格式与 LeetCode 目前使用的方式一致，详情请参阅 LeetCode 序列化二叉树的格式。你并非必须采取这种方式，你也可以采用其他的方法解决这个问题。
+
+#### 先序遍历+深度优先搜索
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+
+/**
+ * Encodes a tree to a single string.
+ *
+ * @param {TreeNode} root
+ * @return {string}
+ */
+var serialize = function(root) {
+    return rserialize(root, "");
+};
+
+const rserialize = (root, str) => {
+    if (root === null) {
+        str += "$,";
+    } else {
+        str += root.val + ",";
+        str = rserialize(root.left, str);
+        str = rserialize(root.right, str);
+    }
+    return str;
+}
+
+/**
+ * Decodes your encoded data to tree.
+ *
+ * @param {string} data
+ * @return {TreeNode}
+ */
+var deserialize = function(data) {
+    const dataArray = data.split(",");
+    return rdeserialize(dataArray);
+};
+
+/**
+ * Your functions will be called as such:
+ * deserialize(serialize(root));
+ */
+
+const rdeserialize = (dataList) => {
+    if (dataList[0] === "$") {
+        dataList.shift();
+        return null;
+    }
+    const root = new TreeNode(parseInt(dataList[0]));
+    dataList.shift();
+    root.left = rdeserialize(dataList);
+    root.right = rdeserialize(dataList);
+
+    return root;
+}
+```
+
+
+
+----
+
+## **BM40** **重建二叉树**
+
+输入某二叉树的前序遍历和中序遍历的结果，请构建该二叉树并返回其根节点。
+
+假设输入的前序遍历和中序遍历的结果中都不含重复的数字。
+
+递归
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {number[]} preorderorder
+ * @param {number[]} inorder
+ * @return {TreeNode}
+ */
+var buildTree = function(preorder, inorder) {
+    let n = preorder.length;
+    return buildTreeCore(preorder, inorder, 0, n - 1, 0, n - 1);
+};
+
+const buildTreeCore = (preorder, inorder, preorder_left, preorder_right, inorder_left, inorder_right) => {
+    if (preorder_left > preorder_right) {
+        return null;
+    }
+    // 前序遍历中的第一个节点就是根节点
+    let preorder_root = preorder_left;
+    // 在中序遍历中定位根节点
+    let inorder_root = inorder.indexOf(preorder[preorder_root]);
+    // 先把根节点建立出来
+    let root = new TreeNode(preorder[preorder_root]);
+    // 得到左子树中的节点数目
+    let size_left_subtree = inorder_root - inorder_left;
+    // 递归地构造左子树，并连接到根节点
+    // 先序遍历中「从 左边界+1 开始的 size_left_subtree」个元素就对应了中序遍历中「从 左边界 开始到 根节点定位-1」的元素
+    root.left = buildTreeCore(preorder, inorder, preorder_left + 1, preorder_left + size_left_subtree, inorder_left, inorder_root - 1);
+    // 递归地构造右子树，并连接到根节点
+    // 先序遍历中「从 左边界+1+左子树节点数目 开始到 右边界」的元素就对应了中序遍历中「从 根节点定位+1 到 右边界」的元素
+    root.right = buildTreeCore(preorder, inorder, preorder_left + size_left_subtree + 1, preorder_right, inorder_root + 1, inorder_right);
+    return root;
+}
+```
+
+迭代
+
+```
+class Solution {
+    public TreeNode buildTree(int[] preorder, int[] inorder) {
+        if (preorder == null || preorder.length == 0) {
+            return null;
+        }
+        TreeNode root = new TreeNode(preorder[0]);
+        Deque<TreeNode> stack = new LinkedList<TreeNode>();
+        stack.push(root);
+        int inorderIndex = 0;
+        for (int i = 1; i < preorder.length; i++) {
+            int preorderVal = preorder[i];
+            TreeNode node = stack.peek();
+            if (node.val != inorder[inorderIndex]) {
+                node.left = new TreeNode(preorderVal);
+                stack.push(node.left);
+            } else {
+                while (!stack.isEmpty() && stack.peek().val == inorder[inorderIndex]) {
+                    node = stack.pop();
+                    inorderIndex++;
+                }
+                node.right = new TreeNode(preorderVal);
+                stack.push(node.right);
+            }
+        }
+        return root;
+    }
+}
+
+
+```
+
+
+
+----
+
+## **BM41** **输出二叉树的右视图**
+
+给定一个二叉树的 **根节点** `root`，想象自己站在它的右侧，按照从顶部到底部的顺序，返回从右侧所能看到的节点值。
+
+#### 深度优先搜索
+
+我们对树进行深度优先搜索，在搜索过程中，我们总是先访问右子树。那么对于每一层来说，我们在这层见到的第一个结点一定是最右边的结点。
+
+这样一来，我们可以存储在每个深度访问的第一个结点，一旦我们知道了树的层数，就可以得到最终的结果数组。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var rightSideView = function(root) {
+  if(!root) return []
+  let arr = []
+  dfs(root, 0, arr)
+  return arr
+};
+function dfs (root, step, res) {
+  if(root){
+    if(res.length === step){
+      res.push(root.val)           // 当数组长度等于当前 深度 时, 把当前的值加入数组
+    }
+    // console.log(step, '-------', res)
+    dfs(root.right, step + 1, res) // 先从右边开始, 当右边没了, 再轮到左边
+    dfs(root.left, step + 1, res)
+  }
+}
+```
+
+
+
+#### 广度优先搜索
+
+我们可以对二叉树进行层次遍历，那么对于每层来说，最右边的结点一定是最后被遍历到的。二叉树的层次遍历可以用广度优先搜索实现。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var rightSideView = function(root) {
+    if (!root) return [];
+    const q = [root];
+    const res = [];
+    while (q.length) {
+        let len = q.length;
+        while (len--) {
+            const x = q.shift();
+            if (len === 0) res.push(x.val);
+            x.left && q.push(x.left);
+            x.right && q.push(x.right);
+        }
+    }
+    return res;
+};
+```
 
 
 
