--- a/面试学习题目/前端面试_10_前端数据请求.md
+++ b/面试学习题目/前端面试_10_前端数据请求.md
@@ -537,6 +537,119 @@ fetch(getReq).then(function(response) {
 
 ---
 
+## axios拦截器执行流程分析
+
+1. 请求拦截：axios的请求拦截会先执行**最后指定的回调函数**先执行，依次向前面执行。
+2. 响应拦截：axios的响应拦截会先执行**最先指定的回调函数**先执行，依次向后面执行
+
+```js
+    
+        axios.interceptors.request.use(config => {
+            console.log(`请求拦截1`);
+            return config;
+        });
+        axios.interceptors.request.use(config => {
+            // 在发送请求之前做些什么
+            console.log(`请求拦截2`);
+            return config;
+        });
+ 
+        // 添加响应拦截器
+        axios.interceptors.response.use(response => {
+            // 对响应数据做点什么
+            console.log(`成功的响应拦截1`);
+            return response.data;
+        });
+
+        // 添加响应拦截器
+        axios.interceptors.response.use(response => {
+            // 对响应数据做点什么
+            console.log(`成功的响应拦截2`);
+            return response;
+       });
+        
+        // 发送请求
+        axios.get('/posts')
+            .then(response => {
+                console.log('成功了');
+            })
+
+```
+
+```
+以上代码的打印结果顺序为：
+console.log(请求拦截2);
+console.log(请求拦截1);
+console.log(成功的响应拦截1);
+console.log(成功的响应拦截2);
+console.log(成功了);
+```
+
+**为什么请求拦截2会在请求拦截1前面执行呢？**
+**因为axios将响应拦截和请求拦截都存放在一个数组中**
+
+而axios开始发送请求，是每次从数组中删除两个回调函数来开始执行，只到数组为空则执行完成。
+
+axios的请求拦截是向数组前面追加的，而响应拦截是向数组后面追加的，所以当axios发送请求时，
+**请求拦截的回调函数最后指定的，最先被调用，从左向右执行。**
+
+axios chains数组来保存请求拦截器和ajax请求以及相应拦截器的方法，但是对于请求拦截器是用unshift传入到chains中的，对响应拦截器采用unshift例如
+
+```js
+request.hanlders.forEach(item=>chains.unshift(item))
+```
+
+对于response拦截器来说是push
+
+```js
+response.hanlders.forEach(item=>chains.push(item))
+```
+
+调用的时候也是用chains
+
+```js
+Axios.prototype.request = function request(config) {
+  /*eslint no-param-reassign:0*/
+  // Allow for axios('example/url'[, config]) a la fetch API
+  if (typeof config === 'string') {
+    config = arguments[1] || {};
+    config.url = arguments[0];
+  } else {
+    config = config || {};
+  }
+
+  // 合并配置
+  config = mergeConfig(this.defaults, config);
+  // 添加method配置, 默认为get
+  config.method = config.method ? config.method.toLowerCase() : 'get';
+
+  var chain = [dispatchRequest, undefined];
+  var promise = Promise.resolve(config);
+
+  // 后添加的请求拦截器保存在数组的前面
+  this.interceptors.request.forEach(function unshiftRequestInterceptors(interceptor) {
+    chain.unshift(interceptor.fulfilled, interceptor.rejected);
+  });
+  // 后添加的响应拦截器保存在数组的后面
+  this.interceptors.response.forEach(function pushResponseInterceptors(interceptor) {
+    chain.push(interceptor.fulfilled, interceptor.rejected);
+  });
+  
+
+  // 通过promise的then()串连起所有的请求拦截器/请求方法/响应拦截器
+  while (chain.length) {
+    promise = promise.then(chain.shift(), chain.shift());
+  }
+
+  // 返回用来指定我们的onResolved和onRejected的promise
+  return promise;
+};
+```
+
+
+
+----
+
 ## 请问你了解ajax请求吗？
 
 传统请求方法的缺点:
