--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1902,11 +1902,15 @@ while (T > 0) {
 
 
 
+
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
+
 
 
 
@@ -2477,4 +2481,37 @@ console.log(solution(nums, n));
 
 -----
 
-## 9.5 招银网络
+## 9.8 小红书面试
+
+项目如何实现
+
+事件传播过程，捕获，目标，冒泡
+
+输入url到页面展示过程
+
+强缓存协商缓存
+
+有哪些浏览器缓存类型
+
+js作用域
+
+setTImeout的原理，执行时间不准确可替代的方式是什么，window.requestAnimationFrame原理
+
+浏览器有哪些进程
+
+算法：最长回文子串
+
+场景题 ：A页面展示信息、B页面编辑信息、C页面选择头像，如何联动三个页面，是数据一致
+
+vue和react虚拟DOM, 虚拟节点有哪些属性
+
+vue的原理
+
+vue响应式原理中的缺陷
+
+vue diff算法
+
+
+
+建议多看看源码，多学开源项目
+
