--- a/面试学习题目/前端面试_10_前端数据请求.md
+++ b/面试学习题目/前端面试_10_前端数据请求.md
@@ -58,7 +58,9 @@ Ajax其核心有JavaScript、XMLHTTPRequest、DOM对象组成，通过XmlHttpReq
       return false;
     }
     httpRequest.onreadystatechange = alertContents;
+      
     httpRequest.open('GET', 'test.html');
+      
     httpRequest.send();
   }
 
@@ -282,7 +284,7 @@ xhr.send(null);
 
 **请求拦截器**用于在接口请求之前做的处理，比如为每个请求带上相应的参数（token，时间戳等）。
 
-**返回拦截器**用于在接口返回之后做的处理，比如对返回的状态进行判断（token是否过期）。
+**响应拦截器**用于在接口返回之后做的处理，比如对返回的状态进行判断（token是否过期）。
 
 **拦截器的使用**
 
@@ -820,6 +822,83 @@ getJSON("http://rap.taobao.org/mockjs/9768/Rap/get").then(function(response) {
 
 ## 请问ajax、axios、fetch请求有何区别？
 
+**XMLHttpRequest对象**
+
+现代浏览器，最开始与服务器交换数据，都是通过XMLHttpRequest对象。它可以使用JSON、XML、HTML和text文本等格式发送和接收数据。
+它给我们带来了很多好处。
+
+- 不重新加载页面的情况下更新网页
+
+- 在页面已加载后从服务器请求/接收数据
+- 在后台向服务器发送数据。
+
+但是，它也有一些缺点：
+
+- 使用起来也比较繁琐，需要设置很多值。
+- 早期的IE浏览器有自己的实现，这样需要写兼容代码。
+
+```js
+if (window.XMLHttpRequest) { // model browser
+  xhr = new XMLHttpRequest()
+} else if (window.ActiveXObject) { // IE 6 and older
+  xhr = new ActiveXObject('Microsoft.XMLHTTP')
+}
+xhr.open('POST', url, true)
+xhr.send(data)
+xhr.onreadystatechange = function () {
+  try {
+    // TODO 处理响应
+    if (xhr.readyState === XMLHttpRequest.DONE) {
+      // XMLHttpRequest.DONE 对应值是 4
+      // Everything is good, the response was received.
+      if (xhr.status === 200) {
+        // Perfect!
+      } else {
+        // There was a problem with the request.
+        // For example, the response may hava a 404 (Not Found)
+        // or 500 (Internal Server Error) response code.
+      }
+    } else {
+      // Not ready yet
+    }
+  } catch (e) {
+    // 通信错误的事件中（例如服务器宕机）
+    alert('Caught Exception: ' + e.description)
+  }
+}
+
+```
+
+
+
+**jQuery ajax**
+
+为了更快捷的操作DOM，并且规避一些浏览器兼容问题，产生了jQuery。它里面的AJAX请求也兼容了各浏览器，可以有简单易用的方法$.get，$.post。简单点说，就是对XMLHttpRequest对象的封装。
+
+```js
+$.ajax({
+   type: 'POST',
+   url: url,
+   data: data,
+   dataType: dataType,
+   success: function () {},
+   error: function () {}
+});
+```
+
+优点：
+
+- 对原生XHR的封装，做了兼容处理，简化了使用。
+- 增加了对JSONP的支持，可以简单处理部分跨域。
+
+缺点：
+
+- 如果有多个请求，并且有依赖关系的话，**容易形成回调地狱**。
+- 本身是针对MVC的编程，不符合现在前端MVVM的浪潮。
+- ajax是jQuery中的一个方法。如果只是要使用ajax却要引入整个jQuery非常的不合理。
+
+
+
 **axios**
 
 **一个基于Promise 用于浏览器和 nodejs 的 HTTP 客户端**，本质上也是**对原生XMLHTTPRequest对象的封装，只不过它是Promise的实现版本，符合最新的ES规范**，具有以下特征：
@@ -842,17 +921,78 @@ h、支持取消请求
 
 i、自动转换JSON数据
 
-
+```js
+axios({
+    method: 'post',
+    url: '/user/12345',
+    data: {
+      firstName: 'liu',
+      lastName: 'weiqin'
+    }
+  })
+  .then(res => console.log(res))
+  .catch(err => console.log(err))
+```
 
 **fetch**
 
+Fetch API提供了一个 JavaScript 接口，用于访问和操作HTTP管道的部分，例如请求和响应。它还提供了一个全局fetch()方法，该方法提供了一种简单，合理的方式来跨网络异步获取资源。
+
+fetch是低层次的API，代替XHR，可以轻松处理各种格式，非文本化格式。可以很容易的被其他技术使用，例如Service Workers。但是想要很好的使用fetch，需要做一些封装处理。
+
 号称是ajax替代品，在ES6时产生，是基于promise设计的。相比ajax，**fetch代码结构更加简单，参数类型与ajax类似**，但fetch不是ajax的进一步封装，**而是原生js，没有使用XMLHttpRequest对象**
+
+```js
+fetch('http://example.com/movies.json')
+  .then(function(response) {
+    return response.json();
+  })
+  .then(function(myJson) {
+    console.log(myJson);
+  });
+```
+
+优势：跨域的处理
+在配置中，添加mode： 'no-cors'就可以跨域了
+
+```js
+fetch('/users.json', {
+    method: 'post', 
+    mode: 'no-cors',
+    data: {}
+}).then(function() { /* handle response */ });
+```
+
+fetch目前遇到的问题：
+
+- **fetch只对网络请求报错**，对400，500都当做成功的请求，需要封装去处理
+- **fetch默认不会带cookie**，需要添加配置项。
+- **fetch不支持abort，不支持超时控制**，使用setTimeout及Promise.reject的实现超时控制并不能阻止请求过程继续在后台运行，造成了流量的浪费。
+- fetch没有办法原生监测请求的进度，而XHR可以。
+
+```
+请注意，fetch规范与jQuery.ajax()主要有两种方式的不同，牢记：
+
+-. 当接收到一个代表错误的 HTTP 状态码时，从 fetch()返回的 Promise 不会被标记为 reject， 即使该 HTTP 响应的状态码是 404 或 500。相反，它会将 Promise 状态标记为 resolve （但是会将 resolve的返回值的 ok 属性设置为 false ），仅当网络故障时或请求被阻止时，才会标记为 reject。
+
+-. 默认情况下，fetch 不会从服务端发送或接收任何 cookies, 如果站点依赖于用户 session，则会导致未经认证的请求（要发送 cookies，必须设置 credentials 选项）。
+
+```
 
 **fetch优点：**
 
 a、符合关注分离，没有将输入、输出和用事件来跟踪的状态混杂在一个对象里
 
 b、写法更加简洁方便
+
+```
+1.  语法简洁，更加语义化
+2.  基于标准 Promise 实现，支持 async/await
+3.  同构方便，使用 [isomorphic-fetch](https://github.com/matthew-andrews/isomorphic-fetch)
+4.更加底层，提供的API丰富（request, response）
+5.脱离了XHR，是ES规范里新的实现方式
+
+```
 
 
 
