--- a/面试学习题目/前端面试_17_浏览器部分.md
+++ b/面试学习题目/前端面试_17_浏览器部分.md
@@ -399,7 +399,7 @@ Cookie 的有效期可以通过`Expires`和`Max-Age`两个属性来设置。
 - `Expires`即`过期时间`
 - `Max-Age`用的是一段时间间隔，单位是秒，从浏览器收到报文开始计算。
 
-若 Cookie 过期，则这个 Cookie 会被删除，并不会发送给服务端。
+**若 Cookie 过期，则这个 Cookie 会被删除**，并不会发送给服务端。
 
 #### 作用域
 
@@ -429,7 +429,7 @@ Cookie 的有效期可以通过`Expires`和`Max-Age`两个属性来设置。
 
   > PS：实际操作中，这种方法很少用了，基本上都是将这些信息存储在数据库中。然后通过查询数据库的信息来恢复购物车里的物品
 
-- 页面之间的传值。在实际开发中，我们往往会通过一个页面跳转到另外一个页面。后端服务器我们可以通过数据库，session 等来传递页面所需要的值。但是在浏览器端，我们可以将数据保存在 cookie 中，然后在另外页面再去获取 cookie 中的数据。
+- 页面之间的传值。在实际开发中，我们往往会通过一个页面跳转到另外一个页面。后端服务器我们可以通过数据库，session 等来传递页面所需要的值。**但是在浏览器端，我们可以将数据保存在 cookie 中，然后在另外页面再去获取 cookie 中的数据。**
 
   > PS：这里要注意 cookie 的时效性，不然会造成获取 cookie 中数据的混乱。
 
@@ -540,7 +540,7 @@ setTimeout(function(){alert(document.cookie)},4000);//4 秒后打印空的字符
 
 （3）**cookie可能被删除**。因为每个cookie都是硬盘上的一个文件，因此很有可能被用户删除；
 
-（4）**cookie安全性不够高**。所有的cookie都是以纯文本的形式记录于文件中，因此如果要保存用户名密码等信息时，最好事先经过加密处理。
+（4）**cookie安全性不够高**。所有的cookie都是以纯文本的形式记录于文件中，因此如果要保存用户名密码等信息时，**最好事先经过加密处理。**
 
 （5）cookie 在保存时，只要后面保存的 name 相同，那么就会覆盖前面的 cookie，**注意是完全覆盖**，包括失效时间，pat
 
@@ -558,7 +558,7 @@ setTimeout(function(){alert(document.cookie)},4000);//4 秒后打印空的字符
 
 **`Access-Control-Allow-Credentials`** 响应头用于在请求要求包含 credentials（[`Request.credentials`](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.mozilla.org%2Fzh-CN%2Fdocs%2FWeb%2FAPI%2FRequest%2Fcredentials) 的值为 `include`）时，告知浏览器是否可以将对请求的响应暴露给前端 JavaScript 代码。 当请求的 credentials 模式为 `include` 时，浏览器仅在响应标头 `Access-Control-Allow-Credentials` 的值为 `true` 的情况下将响应暴露给前端的 JavaScript 代码。。我理解是只有开启后，浏览器在读取到响应头的Set-cookie字段时，才能将cookie字段设置于浏览器中。
 
-Access-Control-Allow-Credentials 标头需要与 XMLHttpRequest.withCredentials 或 Fetch API 的 Request() 构造函数中的 credentials 选项结合使用。Credentials 必须在前后端都被配置（即 Access-Control-Allow-Credentials header 和 XHR 或 Fetch request 中都要配置）才能使带 credentials 的 CORS 请求成功。
+Access-Control-Allow-Credentials 标头需要与 XMLHttpRequest.withCredentials 或 Fetch API 的 Request() 构造函数中的 credentials 选项结合使用。**Credentials 必须在前后端都被配置**（即 Access-Control-Allow-Credentials header 和 XHR 或 Fetch request 中都要配置）**才能使带 credentials 的 CORS 请求成功**。
 
 **`XMLHttpRequest.withCredentials`** 属性是一个布尔类型，它指示了是否该使用类似 Cookies、Authorization Headers (头部授权) 或者 TLS 客户端证书这一类资格证书来创建一个跨站点访问控制（cross-site `Access-Control`）请求。在同一个站点下使用 `withCredentials` 属性是无效的。此外也会被用做`响应中` Cookies 被忽视的标示。默认值是 false。 如果在发送来自其他域的 XMLHttpRequest 请求之前，未设置`withCredentials` 为 true，那么就不能为它自己的域设置 Cookie 值。而通过设置 `withCredentials` 为 true 获得的第三方 Cookies，将会依旧享受同源策略，因此不能被通过document.cookie或者从头部相应请求的脚本等访问。
 
