--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1904,11 +1904,13 @@ while (T > 0) {
 
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
 
@@ -2325,13 +2327,71 @@ token鉴权
 实现一个函数打印hello后，执行函数三次后不再打印
 
 ```
+var ifRun = true;
+var myFunction = function(){
+    if(ifRun){
+        console.log("i'm just do once");
+        ifRun = false;
+    }
+}
 
+myFunction();//i'm just do once
+myFunction();//nothing
+myFunction();//nothing
+
+function runSthTimes(fn, n, context) {
+    return function() {
+        if (n--) {
+            return fn.apply(context || this, arguments);
+        }
+    }
+}
+//栗子如下：
+var myFunction = runSthTimes(function() {
+    console.log('success!')
+},3);
+
+myFunction();//success!
+myFunction();//success!
+myFunction();//success!
+myFunction();//nothing
 ```
 
 实现红绿灯
 
 ```
-red 3 ,yellow 1, green 2
+ let colors = (num, color) => {
+   if(num === 1) {
+       bg1.style.background = color
+       bg2.style.background = '#E2DCDC'
+       bg3.style.background = '#E2DCDC'
+   }
+   if(num === 2) {
+       bg2.style.background = color
+       bg1.style.background = '#E2DCDC'
+       bg3.style.background = '#E2DCDC'
+   }
+   if(num === 3) {
+       bg3.style.background = color
+       bg2.style.background = '#E2DCDC'
+       bg1.style.background = '#E2DCDC'
+   }
+}
+
+
+let setColor = (color, duration, num) => {
+   return new Promise((res,rej) => {
+       colors(num, color)
+       setTimeout(res, duration)
+   })
+}
+async function sett() {
+   await setColor('green', 6000, 1)
+   await setColor('yellow', 2000, 2)
+   await setColor('red', 4000, 3)
+   await sett()
+}
+
 ```
 
 
@@ -2514,4 +2574,99 @@ vue diff算法
 
 
 建议多看看源码，多学开源项目
+
+
+
+----
+
+## 9.9 深信服面试
+
+数据结构与算法了解多少
+算法：计算树中每一个结点的深度
+webpack的作用
+webpack配置能打包自定义的格式文件
+http是什么
+http方法
+浏览器存储技术
+v-if与v-show
+css flex实现流式布局
+协商缓存的请求头
+node.js读取文件的方式，模式，大文件如何读
+ngnix有什么作用
+axios请求的底层原理，拦截器
+如何自己实现拦截器
+前端可视化svg和canvas
+canvas的context有几种类型
+登录鉴权过程
+如何设置不过期的token, refresh
+
+
+
+----
+
+## 9.9 猿辅导面试
+
+
+
+使用两个栈实现队列
+
+```js
+var MyQueue = function() {
+    this.inStack = [];
+    this.outStack = [];
+};
+
+MyQueue.prototype.push = function(x) {
+    this.inStack.push(x);
+};
+
+MyQueue.prototype.pop = function() {
+    if (!this.outStack.length) {
+        this.in2out();
+    }
+    return this.outStack.pop();
+};
+
+MyQueue.prototype.peek = function() {
+    if (!this.outStack.length) {
+        this.in2out();
+    }
+    return this.outStack[this.outStack.length - 1];
+};
+
+MyQueue.prototype.empty = function() {
+    return this.outStack.length === 0 && this.inStack.length === 0;
+};
+
+MyQueue.prototype.in2out = function() {
+    while (this.inStack.length) {
+        this.outStack.push(this.inStack.pop());
+    }
+};
+
+
+```
+
+原型与原型链
+
+```js
+let obj = {};
+
+Object.defineProperty()
+//实现
+obj.a  // 1
+obj.b // 2
+
+```
+
+
+
+```js
+//实现
+sleep(3000).then(() => {
+    console.log("123");
+});
+```
+
+
 
