--- a/image/记录/前端笔试学习题目.md
+++ b/image/记录/前端笔试学习题目.md
@@ -1780,7 +1780,20 @@ console.log(result);
 
 输出多行，表示输入数据处理后的结果
 
-```
+```js
+function solution(n) {
+    const s = new Set();
+    for (let i = 0; i < n; i++) {
+        s.add(parseInt(readline().trim()));
+    }
+    let ans = Array.from(s).sort((a, b) => a - b);
+    for (let i = 0; i < ans.length; i++) {
+        console.log(ans[i]);
+    }
+}
 
+let N = parseInt(readline().trim());
+
+solution(N);
 ```
 
