--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1905,11 +1905,13 @@ while (T > 0) {
 
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
 
@@ -2669,4 +2671,26 @@ sleep(3000).then(() => {
 ```
 
 
+
+----
+
+## 9.13 深信服面试
+
+层序遍历二叉树
+
+项目中d3.js用来做什么
+
+后端写了哪些
+
+进程与线程
+
+webpack
+
+了解哪些工程化
+
+异步题判断
+
+判断代码是否存在内存泄漏
+
+算法：[. 验证二叉树的前序序列化](https://leetcode.cn/problems/verify-preorder-serialization-of-a-binary-tree/)
 
