--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -33,8 +33,7 @@
     this.val = x;
     this.next = null;
 }*/
-function ReverseList(pHead)
-{
+function ReverseList(pHead) {
     // write code here
     let temp;  // 保存cur的下一个节点
     let cur = pHead;
@@ -48,9 +47,7 @@ function ReverseList(pHead)
     }
     return pre;
 }
-module.exports = {
-    ReverseList : ReverseList
-};
+
 ```
 
 **复杂度分析**
@@ -71,8 +68,7 @@ module.exports = {
     this.val = x;
     this.next = null;
 }*/
-function ReverseList(pHead)
-{
+function ReverseList(pHead) {
     // 和双指针法初始化是一样的逻辑
         // let cur = head;
         // let pre = NULL;
@@ -92,10 +88,6 @@ const reverse = (pre, cur) => {
         // cur = temp;
     return reverse(pre, temp);
 }
-
-module.exports = {
-    ReverseList : ReverseList
-};
 ```
 
 我们可以发现，上面的递归写法和双指针法实质上都是从前往后翻转指针指向，其实还有另外一种与双指针法不同思路的递归写法：从后往前翻转指针指向。
@@ -105,8 +97,7 @@ module.exports = {
     this.val = x;
     this.next = null;
 }*/
-function ReverseList(pHead)
-{
+function ReverseList(pHead) {
     // 边缘条件判断
     if (pHead === null) return null;
     if (pHead.next === null) return pHead;
@@ -119,10 +110,6 @@ function ReverseList(pHead)
     pHead.next = null;
     return last;
 }
-
-module.exports = {
-    ReverseList : ReverseList
-};
 ```
 
 复杂度分析
@@ -220,9 +207,6 @@ function reverseLinkedList(pHead){
 }
 
 
-module.exports = {
-    reverseBetween : reverseBetween
-};
 ```
 
 **复杂度分析**
@@ -276,18 +260,13 @@ function reverseBetween(head, left, right) {
     return dummyNode.next;
 }
 
-
-
-module.exports = {
-    reverseBetween : reverseBetween
-};
 ```
 
 复杂度分析：
 
-时间复杂度：O(N)O(N)，其中 NN 是链表总节点数。最多只遍历了链表一次，就完成了反转。
+时间复杂度：O(N)，其中 NN 是链表总节点数。最多只遍历了链表一次，就完成了反转。
 
-空间复杂度：O(1)O(1)。只使用到常数个变量。
+空间复杂度：O(1)。只使用到常数个变量。
 
 
 
