--- a/image/记录/前端笔试学习题目.md
+++ b/image/记录/前端笔试学习题目.md
@@ -1772,11 +1772,11 @@ console.log(result);
 
 数据范围： 1 \le n \le 1000 \1≤*n*≤1000 ，输入的数字大小满足 1 \le val \le 500 \1≤*v**a**l*≤500 
 
-### 输入描述：
+输入描述：
 
 第一行先输入随机整数的个数 N 。 接下来的 N 行每行输入一个整数，代表明明生成的随机数。 具体格式可以参考下面的"示例"。
 
-### 输出描述：
+输出描述：
 
 输出多行，表示输入数据处理后的结果
 
@@ -1795,5 +1795,138 @@ function solution(n) {
 let N = parseInt(readline().trim());
 
 solution(N);
+```
+
+
+
+----
+
+### 汽水瓶
+
+某商店规定：三个空汽水瓶可以换一瓶汽水，允许向老板借空汽水瓶（但是必须要归还）。
+
+小张手上有n个空汽水瓶，她想知道自己最多可以喝到多少瓶汽水。
+
+数据范围：输入的正整数满足 1<= n <= 100
+
+注意：本题存在多组输入。输入的 0 表示输入结束，并不用输出结果。
+
+** 输入描述:**
+
+```
+输入文件最多包含 10 组测试数据，每个数据占一行，仅包含一个正整数 n（ 1<=n<=100 ），表示小张手上的空汽水瓶数。n=0 表示输入结束，你的程序不应当处理这一行。
+```
+
+
+
+**输出描述:**
+
+```
+对于每组测试数据，输出一行，表示最多可以喝的汽水瓶数。如果一瓶也喝不到，输出0。
+```
+
+** 输入例子1:**
+
+```
+3
+10
+81
+0
+```
+
+
+
+**输出例子1:**
+
+```
+1
+5
+40
+```
+
+**例子说明1:**
+
+```
+样例 1 解释：用三个空瓶换一瓶汽水，剩一个空瓶无法继续交换
+样例 2 解释：用九个空瓶换三瓶汽水，剩四个空瓶再用三个空瓶换一瓶汽水，剩两个空瓶，向老板借一个空瓶再用三个空瓶换一瓶汽水喝完得一个空瓶还给老板    
+```
+
+
+
+```js
+function solution(n) {
+    let ans = 0;
+    while (n > 2) {
+        let m = Math.floor(n / 3);
+        ans += m;
+        n = n - m * 3 + m;
+    }
+    if (n === 2) {
+        ans += 1;
+    }
+    return ans;
+}
+
+// console.log(solution(81));
+while (line = readline()) {
+    let n = parseInt(line);
+    if (n === 0) {
+        break;
+    }
+    console.log(solution(n));
+}
+```
+
+
+
+----
+
+### 进制转换
+
+写出一个程序，接受一个十六进制的数，输出该数值的十进制表示。
+
+数据范围：保证结果在1 <= n <= 2^31 - 1
+
+** 输入例子1:**
+
+```
+0xAA
+```
+
+
+
+**输出例子1:**
+
+```
+170
+```
+
+```js
+function solution(hex) {
+    hex = hex.toLowerCase();
+    const n = hex.length;
+    let ans = [];
+    const code0 = '0'.charCodeAt(), code9 = '9'.charCodeAt();
+    const codeA = 'a'.charCodeAt();
+
+    for (let i = 2; i < n; i++) {
+        let code = hex.charCodeAt(i);
+        if (code >= code0 && code <= code9) {
+            code -= code0;
+        } else {
+            code = code - codeA + 10;
+        }
+        ans.push(code);
+    }
+    return ans.reduce((acc, cur) => {
+        acc = 16 * acc + cur;
+        return acc;
+    });
+}
+
+// console.log(solution("0x11"));
+
+let str = readline();
+console.log(solution(str));
 ```
 
