--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -3986,11 +3986,11 @@ MinStack.prototype.getMin = function() {
 
 我们遍历给定的字符串 ss。当我们遇到一个左括号时，我们会期望在后续的遍历中，有一个相同类型的右括号将其闭合。由于后遇到的左括号要先闭合，因此我们可以将这个左括号放入栈顶。
 
-当我们遇到一个右括号时，我们需要将一个相同类型的左括号闭合。此时，我们可以取出栈顶的左括号并判断它们是否是相同类型的括号。如果不是相同的类型，或者栈中并没有左括号，那么字符串 ss 无效，返回 \text{False}False。为了快速判断括号的类型，我们可以使用哈希表存储每一种括号。哈希表的键为右括号，值为相同类型的左括号。
+当我们遇到一个右括号时，我们需要将一个相同类型的左括号闭合。此时，我们可以取出栈顶的左括号并判断它们是否是相同类型的括号。如果不是相同的类型，或者栈中并没有左括号，那么字符串 ss 无效，返回False。为了快速判断括号的类型，我们可以使用哈希表存储每一种括号。哈希表的键为右括号，值为相同类型的左括号。
 
-在遍历结束后，如果栈中没有左括号，说明我们将字符串 ss 中的所有左括号闭合，返回 \text{True}True，否则返回 \text{False}False。
+在遍历结束后，如果栈中没有左括号，说明我们将字符串 ss 中的所有左括号闭合，返回True，否则返回False。
 
-注意到有效字符串的长度一定为偶数，因此如果字符串的长度为奇数，我们可以直接返回 \text{False}False，省去后续的遍历判断过程。
+注意到有效字符串的长度一定为偶数，因此如果字符串的长度为奇数，我们可以直接返回 False，省去后续的遍历判断过程。
 
 ```js
 var isValid = function(s) {
@@ -4024,7 +4024,7 @@ var isValid = function(s) {
 
 时间复杂度：O(n)O(n)，其中 nn 是字符串 ss 的长度。
 
-空间复杂度：O(n + |\Sigma|)O(n+∣Σ∣)，其中 \SigmaΣ 表示字符集，本题中字符串只包含 66 种括号，|\Sigma| = 6∣Σ∣=6。栈中的字符数量为 O(n)O(n)，而哈希表使用的空间为 O(|\Sigma|)O(∣Σ∣)，相加即可得到总空间复杂度。
+空间复杂度：O(n+∣Σ∣)，其中Σ 表示字符集，本题中字符串只包含 66 种括号，∣Σ∣=6。栈中的字符数量为 O(n)，而哈希表使用的空间为 O(∣Σ∣)，相加即可得到总空间复杂度。
 
 
 
@@ -4075,15 +4075,15 @@ console.log(isValid(s));
 
 我们可以顺着方法一的思路继续进行优化。
 
-由于我们需要求出的是滑动窗口的最大值，如果当前的滑动窗口中有两个下标 ii 和 jj，其中 ii 在 jj 的左侧（i < ji<j），并且 ii 对应的元素不大于 jj 对应的元素（\textit{nums}[i] \leq \textit{nums}[j]nums[i]≤nums[j]），那么会发生什么呢？
+由于我们需要求出的是滑动窗口的最大值，如果当前的滑动窗口中有两个下标 i 和 j，其中 i 在 j 的左侧（i<j），并且 i 对应的元素不大于 j 对应的元素nums[i] ≤ nums[j]），那么会发生什么呢？
 
-当滑动窗口向右移动时，只要 ii 还在窗口中，那么 jj 一定也还在窗口中，这是 ii 在 jj 的左侧所保证的。因此，由于 \textit{nums}[j]nums[j] 的存在，\textit{nums}[i]nums[i] 一定不会是滑动窗口中的最大值了，我们可以将 \textit{nums}[i]nums[i] 永久地移除。
+当滑动窗口向右移动时，只要 i 还在窗口中，那么 j 一定也还在窗口中，这是 i 在 j 的左侧所保证的。因此，**由于 nums[j] 的存在，nums[i] 一定不会是滑动窗口中的最大值了，我们可以将nums[i] 永久地移除。**
 
-因此我们可以使用一个队列存储所有还没有被移除的下标。在队列中，这些下标按照从小到大的顺序被存储，并且它们在数组 \textit{nums}nums 中对应的值是严格单调递减的。因为如果队列中有两个相邻的下标，它们对应的值相等或者递增，那么令前者为 ii，后者为 jj，就对应了上面所说的情况，即 \textit{nums}[i]nums[i] 会被移除，这就产生了矛盾。
+因此我们可以**使用一个队列存储所有还没有被移除的下标**。在队列中，这些下标按照从小到大的顺序被存储，**并且它们在数组 nums 中对应的值是严格单调递减的**。因为如果队列中有两个相邻的下标，它们对应的值相等或者递增，那么令前者为 i，后者为 j，就对应了上面所说的情况，即nums[i] 会被移除，这就产生了矛盾。
 
-当滑动窗口向右移动时，我们需要把一个新的元素放入队列中。为了保持队列的性质，我们会不断地将新的元素与队尾的元素相比较，如果前者大于等于后者，那么队尾的元素就可以被永久地移除，我们将其弹出队列。我们需要不断地进行此项操作，直到队列为空或者新的元素小于队尾的元素。
+当滑动窗口向右移动时，我们需要把一个新的元素放入队列中。为了保持队列的性质，我们会不断地将新的元素与队尾的元素相比较，**如果前者大于等于后者，那么队尾的元素就可以被永久地移除**，我们将其弹出队列。我们需要不断地进行此项操作，直到队列为空或者新的元素小于队尾的元素。
 
-由于队列中下标对应的元素是严格单调递减的，因此此时队首下标对应的元素就是滑动窗口中的最大值。但与方法一中相同的是，此时的最大值可能在滑动窗口左边界的左侧，并且随着窗口向右移动，它永远不可能出现在滑动窗口中了。因此我们还需要不断从队首弹出元素，直到队首元素在窗口中为止。
+由于队列中下标对应的元素是严格单调递减的，因此**此时队首下标对应的元素就是滑动窗口中的最大值**。但与方法一中相同的是，此时的最大值可能在滑动窗口左边界的左侧，并且随着窗口向右移动，它永远不可能出现在滑动窗口中了。**因此我们还需要不断从队首弹出元素，直到队首元素在窗口中为止。**
 
 为了可以同时弹出队首和队尾的元素，我们需要使用双端队列。满足这种单调性的双端队列一般称作「单调队列」。
 
@@ -4107,8 +4107,10 @@ var maxSlidingWindow = function(nums, k) {
     }
     ans.push(nums[queue[0]]);
     for (let i = k; i < n; i++) {
-        /*为了保持队列的性质，我们会不断地将新的元素与队尾的元素相比较，如果前者大于等于后者，
-        那么队尾的元素就可以被永久地移除，我们将其弹出队列。我们需要不断地进行此项操作，直到队列为空或者新的元素小于队尾的元素。*/
+        /*
+        为了保持队列的性质，我们会不断地将新的元素与队尾的元素相比较，如果前者大于等于后者，
+        那么队尾的元素就可以被永久地移除，我们将其弹出队列。我们需要不断地进行此项操作，直到队列为空或者新的元素小于队尾的元素。
+        */
         while (queue.length && nums[i] >= nums[queue[queue.length - 1]]) {
             queue.pop();
         }
@@ -4131,9 +4133,9 @@ console.log(maxSlidingWindow(nums, k));
 
 复杂度分析
 
-时间复杂度：O(n)O(n)，其中 nn 是数组 \textit{nums}nums 的长度。每一个下标恰好被放入队列一次，并且最多被弹出队列一次，因此时间复杂度为 O(n)O(n)。
+时间复杂度：O(n)，其中 n 是数组 nums 的长度。每一个下标恰好被放入队列一次，并且最多被弹出队列一次，因此时间复杂度为 O(n)。
 
-空间复杂度：O(k)O(k)。与方法一不同的是，在方法二中我们使用的数据结构是双向的，因此「不断从队首弹出元素」保证了队列中最多不会有超过 k+1k+1 个元素，因此队列使用的空间为 O(k)O(k)。
+空间复杂度：O(k)。与方法一不同的是，在方法二中我们使用的数据结构是双向的，因此「不断从队首弹出元素」保证了队列中最多不会有超过 k+1 个元素，因此队列使用的空间为 O(k)。
 
 
 
@@ -4204,15 +4206,15 @@ var getLeastNumbers = function(arr, k) {
 
 复杂度分析
 
-时间复杂度：O(n\log n)O(nlogn)，其中 nn 是数组 arr 的长度。算法的时间复杂度即排序的时间复杂度。
+时间复杂度：O(nlogn)，其中 nn 是数组 arr 的长度。算法的时间复杂度即排序的时间复杂度。
 
-空间复杂度：O(\log n)O(logn)，排序所需额外的空间复杂度为 O(\log n)O(logn)。
+空间复杂度：O(logn)，排序所需额外的空间复杂度为 O(\log n)O(logn)。
 
 
 
 #### 堆
 
-我们用一个大根堆实时维护数组的前 kk 小值。首先将前 kk 个数插入大根堆中，随后从第 k+1k+1 个数开始遍历，如果当前遍历到的数比大根堆的堆顶的数要小，就把堆顶的数弹出，再插入当前遍历到的数。最后将大根堆里的数存入数组返回即可。在下面的代码中，由于 C++ 语言中的堆（即优先队列）为大根堆，我们可以这么做。而 Python 语言中的堆为小根堆，因此我们要对数组中所有的数取其相反数，才能使用小根堆维护前 kk 小值。
+我们用一个大根堆实时维护数组的前 k 小值。首先将前 k 个数插入大根堆中，随后从第 k+1 个数开始遍历，如果当前遍历到的数比大根堆的堆顶的数要小，就把堆顶的数弹出，再插入当前遍历到的数。最后将大根堆里的数存入数组返回即可。在下面的代码中，由于 C++ 语言中的堆（即优先队列）为大根堆，我们可以这么做。而 Python 语言中的堆为小根堆，因此我们要对数组中所有的数取其相反数，才能使用小根堆维护前 k 小值。
 
 ```js
 /**
@@ -4291,9 +4293,9 @@ var getLeastNumbers = function(arr, k) {
 
 复杂度分析
 
-时间复杂度：O(n\log k)O(nlogk)，其中 nn 是数组 arr 的长度。由于大根堆实时维护前 kk 小值，所以插入删除都是 O(\log k)O(logk) 的时间复杂度，最坏情况下数组里 nn 个数都会插入，所以一共需要 O(n\log k)O(nlogk) 的时间复杂度。
+时间复杂度：O(nlogk)，其中 n 是数组 arr 的长度。由于大根堆实时维护前 k 小值，所以插入删除都是 O(logk) 的时间复杂度，最坏情况下数组里 n 个数都会插入，所以一共需要 O(nlogk) 的时间复杂度。
 
-空间复杂度：O(k)O(k)，因为大根堆里最多 kk 个数。
+空间复杂度：O(k)，因为大根堆里最多 k 个数。
 
 
 
@@ -4303,69 +4305,69 @@ var getLeastNumbers = function(arr, k) {
 
 我们定义函数 randomized_selected(arr, l, r, k) 表示划分数组 arr 的 [l,r] 部分，使前 k 小的数在数组的左侧，在函数里我们调用快排的划分函数，假设划分函数返回的下标是 pos（表示分界值 pivot 最终在数组中的位置），即 pivot 是数组中第 pos - l + 1 小的数，那么一共会有三种情况：
 
-如果 pos - l + 1 == k，表示 pivot 就是第 kk 小的数，直接返回即可；
+如果 pos - l + 1 == k，表示 pivot 就是第 k 小的数，直接返回即可；
 
-如果 pos - l + 1 < k，表示第 kk 小的数在 pivot 的右侧，因此递归调用 randomized_selected(arr, pos + 1, r, k - (pos - l + 1))；
+如果 pos - l + 1 < k，表示第 k 小的数在 pivot 的右侧，因此递归调用 randomized_selected(arr, pos + 1, r, k - (pos - l + 1))；
 
-如果 pos - l + 1 > k，表示第 kk 小的数在 pivot 的左侧，递归调用 randomized_selected(arr, l, pos - 1, k)。
+如果 pos - l + 1 > k，表示第 k 小的数在 pivot 的左侧，递归调用 randomized_selected(arr, l, pos - 1, k)。
 
 函数递归入口为 randomized_selected(arr, 0, arr.length - 1, k)。在函数返回后，将前 k 个数放入答案数组返回即可。
 
 
 
 ```java
-class Solution {
-    public int[] getLeastNumbers(int[] arr, int k) {
-        randomizedSelected(arr, 0, arr.length - 1, k);
-        int[] vec = new int[k];
-        for (int i = 0; i < k; ++i) {
-            vec[i] = arr[i];
-        }
-        return vec;
-    }
+/**
+ * @param {number[]} arr
+ * @param {number} k
+ * @return {number[]}
+ */
+var getLeastNumbers = function(arr, k) {
+    randomizedSelected(arr, 0, arr.length - 1, k);
+    return arr.slice(0, k);
+}
 
-    private void randomizedSelected(int[] arr, int l, int r, int k) {
-        if (l >= r) {
-            return;
-        }
-        int pos = randomizedPartition(arr, l, r);
-        int num = pos - l + 1;
-        if (k == num) {
-            return;
-        } else if (k < num) {
-            randomizedSelected(arr, l, pos - 1, k);
-        } else {
-            randomizedSelected(arr, pos + 1, r, k - num);
-        }
+function randomizedSelected(arr, left, right, k) {
+    if (left > right) {
+        return;
     }
-
-    // 基于随机的划分
-    private int randomizedPartition(int[] nums, int l, int r) {
-        int i = new Random().nextInt(r - l + 1) + l;
-        swap(nums, r, i);
-        return partition(nums, l, r);
-    }
-
-    private int partition(int[] nums, int l, int r) {
-        int pivot = nums[r];
-        int i = l - 1;
-        for (int j = l; j <= r - 1; ++j) {
-            if (nums[j] <= pivot) {
-                i = i + 1;
-                swap(nums, i, j);
-            }
-        }
-        swap(nums, i + 1, r);
-        return i + 1;
-    }
-
-    private void swap(int[] nums, int i, int j) {
-        int temp = nums[i];
-        nums[i] = nums[j];
-        nums[j] = temp;
+    const pos = randomizedPartition(arr, left, right);
+    const num = pos - left + 1;
+    if (k === num) {
+        return;
+    } else if (k < num) {
+        //表示第 k 小的数在 pivot 的左侧
+        randomizedSelected(arr, left, pos - 1, k);
+    } else {
+        // 表示第 k 小的数在 pivot 的右侧
+        randomizedSelected(arr, pos + 1, right, k);
     }
 }
 
+function randomizedPartition(arr, left, right) {
+    const pivotIndex = left + Math.floor(Math.random() * (right - left));
+    swap(arr, right, pivotIndex);
+    return partition(arr, left, right);
+}
+
+function partition(arr, left, right) {
+    const pivot = arr[right];
+    let i = left - 1;
+    for (let j = left; j <= right - 1; j++) {
+        if (arr[j] <= pivot) {
+            i++;
+            swap(arr, i, j);
+        }
+    }
+    swap(arr, i + 1, right);
+    return i + 1;
+}
+
+function swap(arr, i, j) {
+    [arr[i], arr[j]] = [arr[j], arr[i]];
+}
+
+let nums = [4, 5, 2, 7, 9, 1, 0, 3, 8, 6];
+console.log(getLeastNumbers(nums, 5))
 ```
 
 
